# ai-gif

./: Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: decode.rs  rgb_frame.rs
examples/: check.rs  explode.rs  parallel.rs
src/: encoder.rs  lib.rs  traits.rs
src/reader/: buf_reader.rs  decoder.rs  mod.rs
tests/: check_testimages.rs  crashtest.rs  decode.rs  roundtrip.rs  stall.rs
